Moves some patterns out into cf and updates appropriate cf components to bring them back in.

--- a/_layouts/email-subscribe-form.html
+++ b/_layouts/email-subscribe-form.html
@@ -35,7 +35,7 @@
     ] %}
     {% for allowed_category in govdelivery_categories -%}
     {% if category.term == allowed_category.name %}
-        <label class="form-group_item form-label">
+        <label class="form-group_item">
             <input class="custom-input"
                    type="checkbox"
                    name="code"
