--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -326,19 +326,19 @@
                                 <label class="form-label-header">
                                     Categories
                                 </label>
-                                <label class="form-group_item form-label">
+                                <label class="form-group_item">
                                     <input type="checkbox" name="filter_category" value="consumer">
                                     Announcements &amp; updates
                                 </label>
-                                <label class="form-group_item form-label">
+                                <label class="form-group_item">
                                     <input type="checkbox" name="filter_category" value="regulation & compliance">
                                     Consumer information
                                 </label>
-                                <label class="form-group_item form-label">
+                                <label class="form-group_item">
                                     <input type="checkbox" name="filter_category" value="innovation">
                                     Engagement
                                 </label>
-                                <label class="form-group_item form-label">
+                                <label class="form-group_item">
                                     <input type="checkbox" name="filter_category" value="announcements">
                                     Innovation &amp; data
                                 </label>
@@ -396,15 +396,15 @@
                   .form-l_col.form-l_col-1-3
                     .form-group
                       .form-label-header
-                      .form-group_item.form-label
+                      .form-group_item
                   .form-l_col.form-l_col-1-3
                     .form-group
                       .form-label-header
-                      .form-group_item.form-label
+                      .form-group_item
                   .form-l_col.form-l_col-1-3
                     .form-group
                       .form-label-header
-                      .form-group_item.form-label
+                      .form-group_item
                 .form-actions.form-actions__right-on-med
   tags:
     - cfgov-blog-docs
