--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -312,8 +312,7 @@
   patterns:
     - name: Custom checkbox demo with initialization markup
       markup: |
-        <label class="form-label"
-               for="custom-input_checkbox-lorem">
+        <label for="custom-input_checkbox-lorem">
             <input class="custom-input"
                    id="custom-input_checkbox-lorem"
                    type="checkbox"
@@ -322,8 +321,7 @@
             Lorem
         </label>
         <br>
-        <label class="form-label"
-               for="custom-input_checkbox-ipsum">
+        <label for="custom-input_checkbox-ipsum">
             <input class="custom-input"
                    id="custom-input_checkbox-ipsum"
                    type="checkbox"
@@ -332,8 +330,7 @@
             Ipsum
         </label>
         <br>
-        <label class="form-label"
-               for="custom-input_checkbox-dolor">
+        <label for="custom-input_checkbox-dolor">
             <input class="custom-input"
                    id="custom-input_checkbox-dolor"
                    type="checkbox"
@@ -351,8 +348,7 @@
         - "Use the markup structure above to add .custom-input elements."
     - name: Custom radio button demo with initialization markup
       markup: |
-        <label class="form-label"
-               for="custom-input_radio-lorem">
+        <label for="custom-input_radio-lorem">
             <input class="custom-input"
                    id="custom-input_radio-lorem"
                    type="radio"
@@ -361,8 +357,7 @@
             Lorem
         </label>
         <br>
-        <label class="form-label"
-               for="custom-input_radio-ipsum">
+        <label for="custom-input_radio-ipsum">
             <input class="custom-input"
                    id="custom-input_radio-ipsum"
                    type="radio"
@@ -371,8 +366,7 @@
             Ipsum
         </label>
         <br>
-        <label class="form-label"
-               for="custom-input_radio-dolor">
+        <label for="custom-input_radio-dolor">
             <input class="custom-input"
                    id="custom-input_radio-dolor"
                    type="radio"
