Get SVG fallback with .no-js working for real
Also updates to the latest cf-component-demo and rebuilds docs.

--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -44,9 +44,9 @@
     - name: Logo
       markup: |
         <a href="/">
-            <img class="logo logo__js"
+            <img class="logo u-js-only"
                  src="../../static/img/logo.svg"
-                 onerror="this.src='/static/img/logo.png';"
+                 onerror="this.onerror=null;this.src='/static/img/logo.png';"
                  alt="Consumer Financial Protection Bureau"
                  width="262"
                  height="66">
@@ -60,8 +60,11 @@
         </a>
       notes:
         - "CSS provides margin around the logo."
-        - "Markup allows for the usage of an SVG logo for browsers that support
-           SVG, with a fallback to PNG for browsers that don't."
+        - "The `onerror` attribute allows for the usage of an SVG logo for
+           browsers that support SVG, with a fallback to PNG for browsers that
+           don't."
+        - "The `noscript` element displays the PNG fallback in the event that
+           JavaScript is not available."
         - "The path in the `src` attribute has been adjusted for these docs."
   tags:
     - cfgov-layout
@@ -70,6 +73,24 @@
 .logo {
     display: block;
     margin: unit(15px / @base-font-size-px, em);
+}
+
+.logo__js {
+    display: block;
+}
+
+.logo__no-js {
+    display: none;
+}
+
+.no-js {
+    .logo__js {
+        display: none;
+    }
+
+    .logo__no-js {
+        display: block;
+    }
 }
 
 
