--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -1,9 +1,9 @@
     <header class="header" role="banner">
         <div class="wrapper">
             <a href="/">
-                <img class="logo logo__js"
+                <img class="logo u-js-only"
                      src="/static/img/logo.svg"
-                     onerror="this.src='/static/img/logo.png';"
+                     onerror="this.onerror=null;this.src='/static/img/logo.png';"
                      alt="Consumer Financial Protection Bureau"
                      width="262"
                      height="66">
