--- a/layouts/layout-1-3/index.html
+++ b/layouts/layout-1-3/index.html
@@ -1,23 +1,28 @@
-{% extends "layout-side-nav.html" %}
+{% extends "layout-1-3.html" %}
 {% import "section-vars.html" as section_vars %}
 
 {# Variables #}
-{% set active_nav_id = "layout-side-nav" -%}
+{% set active_nav_id = "layout-1-3" -%}
 
 {# Block overrides #}
 {% block demo_title -%}
-    Side nav layout
+    1-3 layout
 {%- endblock %}
 
 {% block title -%}
-    Side nav layout
+    1-3 layout
 {%- endblock %}
 
 {% block desc -%}
-    An example of using layout-side-nav.html
+    An example of using layout-1-3.html
 {%- endblock %}
 
 {% block content_main %}
-    <h1>Side nav layout</h1>
+    <h1>1-3 layout</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quaerat minus dignissimos vero eaque sapiente quo quidem commodi repellat eum pariatur sint sunt odit rem id velit nisi delectus excepturi!</p>
+    <a href="{{ section_vars.path }}" class="jump-link">Layouts landing page</a>
+{% endblock %}
+
+{% block content_sidebar %}
+    <p>Sidebar</p>
 {% endblock %}
