--- a/layouts/layout-2-1-bleedbar/index.html
+++ b/layouts/layout-2-1-bleedbar/index.html
@@ -1,23 +1,23 @@
-{% extends "layout-side-nav.html" %}
+{% extends "layout-2-1-bleedbar.html" %}
 {% import "section-vars.html" as section_vars %}
 
-{# Variables #}
-{% set active_nav_id = "layout-side-nav" -%}
-
-{# Block overrides #}
 {% block demo_title -%}
-    Side nav layout
+    2-1 bleedbar layout
 {%- endblock %}
 
 {% block title -%}
-    Side nav layout
+    2-1 bleedbar layout
 {%- endblock %}
 
 {% block desc -%}
-    An example of using layout-side-nav.html
+    An example of using layout-2-1-bleedbar.html
 {%- endblock %}
 
 {% block content_main %}
-    <h1>Side nav layout</h1>
+    <h1>2-1 bleedbar layout</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quaerat minus dignissimos vero eaque sapiente quo quidem commodi repellat eum pariatur sint sunt odit rem id velit nisi delectus excepturi!</p>
 {% endblock %}
+
+{% block content_sidebar -%}
+    <p>Sidebar</p>
+{%- endblock %}
