--- a/layouts/layout-base-sidebar-first/index.html
+++ b/layouts/layout-base-sidebar-first/index.html
@@ -1,23 +1,23 @@
-{% extends "layout-side-nav.html" %}
+{% extends "layout-base-sidebar-first.html" %}
 {% import "section-vars.html" as section_vars %}
 
-{# Variables #}
-{% set active_nav_id = "layout-side-nav" -%}
-
-{# Block overrides #}
 {% block demo_title -%}
-    Side nav layout
+    Base layout with sidebar content first
 {%- endblock %}
 
 {% block title -%}
-    Side nav layout
+    Base layout with sidebar content first
 {%- endblock %}
 
 {% block desc -%}
-    An example of using layout-side-nav.html
+    An example of using layout-base-sidebar-first.html
 {%- endblock %}
 
 {% block content_main %}
-    <h1>Side nav layout</h1>
+    <h1>Base layout with sidebar content first</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quaerat minus dignissimos vero eaque sapiente quo quidem commodi repellat eum pariatur sint sunt odit rem id velit nisi delectus excepturi!</p>
+{% endblock %}
+
+{% block content_sidebar %}
+    <h1>Sidebar</h1>
 {% endblock %}
