--- a/layouts/layout-base/index.html
+++ b/layouts/layout-base/index.html
@@ -1,23 +1,19 @@
-{% extends "layout-side-nav.html" %}
+{% extends "layout-base.html" %}
 {% import "section-vars.html" as section_vars %}
 
-{# Variables #}
-{% set active_nav_id = "layout-side-nav" -%}
-
-{# Block overrides #}
 {% block demo_title -%}
-    Side nav layout
+    Base layout
 {%- endblock %}
 
 {% block title -%}
-    Side nav layout
+    Base layout
 {%- endblock %}
 
 {% block desc -%}
-    An example of using layout-side-nav.html
+    An example of using layout-base.html
 {%- endblock %}
 
-{% block content_main %}
-    <h1>Side nav layout</h1>
+{% block body_content %}
+    <h1>Base layout</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quaerat minus dignissimos vero eaque sapiente quo quidem commodi repellat eum pariatur sint sunt odit rem id velit nisi delectus excepturi!</p>
 {% endblock %}
