--- a/layouts/section-vars.html
+++ b/layouts/section-vars.html
@@ -2,10 +2,14 @@
 {# Variables #}
 {% set path = "/layouts/" %}
 {% set nav_items = [
-    (path, "index", "Home"),
+    (path, "index", "Layouts home"),
+    (path + "content-blocks-jinja/", "content-blocks-jinja", "Content blocks (Jinja)"),
+    (path + "layout-base/", "layout-base", "Base layout"),
+    (path + "layout-base-main-first/", "layout-base-main-first", "Base layout with main content first"),
+    (path + "layout-base-sidebar-first/", "layout-base-sidebar-first", "Base layout with sidebar content first"),
+    (path + "layout-1-3/", "layout-1-3", "1-3 layout"),
     (path + "layout-side-nav/", "layout-side-nav", "Side nav layout"),
-    (path + "layout-bleedbar/", "layout-bleedbar", "Bleedbar layout"),
-    (path + "layout-simple/", "layout-simple", "Simple layout"),
-    (path + "content-blocks/", "content-blocks", "Content blocks"),
-    (path + "main-content-footer/", "main-content-footer", "Main content footer")
+    (path + "layout-2-1/", "layout-2-1", "2-1 layout"),
+    (path + "layout-2-1-bleedbar/", "layout-2-1-bleedbar", "2-1 bleedbar layout"),
+    (path + "content-blocks-html/", "content-blocks-html", "Content blocks (html)")
 ] -%}
