--- a/_layouts/layout-base-main-first.html
+++ b/_layouts/layout-base-main-first.html
@@ -1,14 +1,14 @@
 {% extends "layout-base.html" %}
 
-{% block body_content -%}
+{% block body_content scoped -%}
 <div class="wrapper content_wrapper">
     <div class="content_main {% block content_main_modifiers -%}{%- endblock %}">
         <section>
-            {% block content_main -%}{%- endblock %}
+            {% block content_main scoped -%}{%- endblock %}
         </section>
     </div>
     <aside class="content_sidebar {% block content_sidebar_modifiers -%}{%- endblock %}">
-        {% block content_sidebar -%}{%- endblock %}
+        {% block content_sidebar scoped -%}{%- endblock %}
     </aside>
 </div>
 {%- endblock %}
