--- a/_layouts/email-subscribe-form.html
+++ b/_layouts/email-subscribe-form.html
@@ -1,7 +1,5 @@
 
-<!-- <form class="reveal-on-focus"
-      id="email-subscribe-form"
-      action="/govdelivery-subscribe/success/"> -->
+{% macro render(query) %}
 
 <form class="reveal-on-focus"
       id="email-subscribe-form"
@@ -52,3 +50,5 @@
     </div>
 
 </form>
+
+{% endmacro %}
