--- a/_layouts/related-posts.html
+++ b/_layouts/related-posts.html
@@ -1,4 +1,6 @@
 
+{% macro render(post, more_like_this) %}
+
 <div class="related-posts">
     <h1 class="header-slug">
         <span class="header-slug_inner">
@@ -16,3 +18,5 @@
     {% endfor %}
     </ul>
 </div>
+
+{% endmacro %}
