Big fixes and ports newsroom.

--- a/_includes/post-filters.html
+++ b/_includes/post-filters.html
@@ -1,5 +1,5 @@
 
-{% macro render(posts, active_filters, active_filters_total, active_date_filters, query, post_macros, selected_filters_for_field, current_date) %}
+{% macro render(posts, active_filters, active_filters_total, active_date_filters, query, post_macros, selected_filters_for_field, current_date, path) %}
 
 <div class="expandable">
     <div class="expandable_header expandable_header__spaced">
