--- a/_layouts/layout-side-nav.html
+++ b/_layouts/layout-side-nav.html
@@ -18,5 +18,5 @@
 
 {# Adding the side nav macro #}
 {% block content_sidebar -%}
-    {{ macros.side_nav(nav_items, active_nav_id) }}
+    {{ macros.side_nav(section.nav_items, active_nav_id) }}
 {%- endblock %}
