--- a/layouts/content-blocks-html/index.html
+++ b/layouts/content-blocks-html/index.html
@@ -1,5 +1,5 @@
 {% extends "layout-side-nav.html" %}
-{% import "section-vars.html" as section_vars %}
+{% import "_section_layouts.html" as section %}
 
 {# Variables #}
 {% set active_nav_id = "content-blocks-html" -%}
