--- a/layouts/layout-base-main-first/index.html
+++ b/layouts/layout-base-main-first/index.html
@@ -1,5 +1,5 @@
 {% extends "layout-base-main-first.html" %}
-{% import "section-vars.html" as section_vars %}
+{% import "_section_layouts.html" as section %}
 
 {% block demo_title -%}
     Base layout with main content first
