--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -122,13 +122,11 @@
 
     {% include "header.html" %}
 
-
     <!-- PRIMARY CONTENT -->
     {% block content scoped %}
         This will be replaced in templates that extend this template and override "content".
-    {% endblock content %}
+    {% endblock %}
     <!-- /PRIMARY CONTENT -->
-
 
     {% include "footer.html" %}
 
@@ -141,8 +139,5 @@
 -->
 
 <script src="/static/js/main.min.js"></script>
-
 </body>
-
 </html>
-
