--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {% extends "layout-side-nav.html" %}
-{% import "section-vars.html" as section_vars %}
+{% import "_section_layouts.html" as section %}
 
 {# Meta blocks #}
 {% block demo_title -%}
@@ -18,5 +18,5 @@
 {% block content_main %}
     <h1>Layouts</h1>
     <p class="short-desc">Use the navigation to the left to find the different layout templates available. Use the link below to view a page which shows the different content blocks that you can override.</p>
-    <a href="{{ section_vars.path }}content-blocks" class="jump-link">View the Content blocks page</a>
+    <a href="{{ section.path }}content-blocks" class="jump-link">View the Content blocks page</a>
 {% endblock %}
