--- a/layouts/layout-1-3/index.html
+++ b/layouts/layout-1-3/index.html
@@ -1,5 +1,5 @@
 {% extends "layout-1-3.html" %}
-{% import "section-vars.html" as section_vars %}
+{% import "_section_layouts.html" as section %}
 
 {# Variables #}
 {% set active_nav_id = "layout-1-3" -%}
@@ -20,7 +20,7 @@
 {% block content_main %}
     <h1>1-3 layout</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quaerat minus dignissimos vero eaque sapiente quo quidem commodi repellat eum pariatur sint sunt odit rem id velit nisi delectus excepturi!</p>
-    <a href="{{ section_vars.path }}" class="jump-link">Layouts landing page</a>
+    <a href="{{ section.path }}" class="jump-link">Layouts landing page</a>
 {% endblock %}
 
 {% block content_sidebar %}
