--- a/_layouts/header.html
+++ b/_layouts/header.html
@@ -15,5 +15,10 @@
                          height="66">
                 </noscript>
             </a>
+
+            <div class="header_misc">
+                Contact us: <a class="header_misc_tel" href="tel:8554112372">(855) 411-2372</a>
+                <a class="header_misc_es">Español</a>
+            </div>
         </div>
     </header><!-- END .header -->
