--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -124,19 +124,38 @@
               <input type="submit" value="edit on codepen.io" class="docs-pattern_footer-edit-btn">
             </form>
             <ul class="docs-notes">
-              <li>CSS provides margin around the logo.</li>
               <li>The `onerror` attribute allows for the usage of an SVG logo for browsers that support SVG, with a fallback to PNG for browsers that don't.</li>
               <li>The `noscript` element displays the PNG fallback in the event that JavaScript is not available.</li>
               <li>The path in the `src` attribute has been adjusted for these docs.</li>
             </ul>
           </footer>
         </div>
+        <div class="docs-pattern">
+          <h3 class="docs-pattern_header">Miscellaneous stuff (top right)</h3>
+          <section class="docs-pattern_pattern">
+<div class="header_misc">
+    Contact us: <a class="header_misc_tel" href="tel:8554112372">(855) 411-2372</a>
+    <a class="header_misc_es">Español</a>
+</div>
+
+          </section>
+          <footer class="docs-pattern_footer">
+            <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;div class=&quot;header_misc&quot;&gt;
+    Contact us: &lt;a class=&quot;header_misc_tel&quot; href=&quot;tel:8554112372&quot;&gt;(855) 411-2372&lt;/a&gt;
+    &lt;a class=&quot;header_misc_es&quot;&gt;Español&lt;/a&gt;
+&lt;/div&gt;</code></pre>
+            <form action="http://codepen.io/pen/define" method="POST" target="_blank" class="docs-pattern_footer-edit">
+              <input type="hidden" name="data" value="{&amp;quot;css&amp;quot;:&amp;quot;body { padding: 1em; }&amp;quot;,&amp;quot;css_external&amp;quot;:&amp;quot;http://cfpb.github.io/cfgov-refresh/static/css/main.ie.css&amp;quot;,&amp;quot;html&amp;quot;:&amp;quot;\n&lt;div class=\&amp;quot;header_misc\&amp;quot;&gt;\n    Contact us: &lt;a class=\&amp;quot;header_misc_tel\&amp;quot; href=\&amp;quot;tel:8554112372\&amp;quot;&gt;(855) 411-2372&lt;/a&gt;\n    &lt;a class=\&amp;quot;header_misc_es\&amp;quot;&gt;Español&lt;/a&gt;\n&lt;/div&gt;\n&amp;quot;}">
+              <input type="submit" value="edit on codepen.io" class="docs-pattern_footer-edit-btn">
+            </form>
+          </footer>
+        </div>
       </div>
       <div class="docs-css">
         <pre class="docs-code"><code data-language="css">
 .logo {
-  display: block;
-  margin: 0.9375em;
+  margin: 30px 15px 15px;
+  vertical-align: middle;
 }
 
 .logo__no-js {
@@ -145,6 +164,228 @@
 
 .no-js .logo__no-js {
   display: block;
+}
+
+.header_misc {
+  margin: 30px 15px 15px;
+  position: absolute;
+  top: 0;
+  right: 15px;
+  color: #75787b;
+  font-family: &quot;AvenirNextLTW01-Regular&quot;, Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+}
+
+.header_misc em,
+.header_misc i {
+  font-family: &quot;AvenirNextLTW01-Italic&quot;, Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .header_misc em,
+.lt-ie9 .header_misc i {
+  font-style: normal !important;
+}
+
+.lt-ie9 .header_misc em,
+.lt-ie9 .header_misc i {
+  font-style: normal !important;
+}
+
+.header_misc strong,
+.header_misc b {
+  font-family: &quot;AvenirNextLTW01-Demi&quot;, Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .header_misc strong,
+.lt-ie9 .header_misc b {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .header_misc strong,
+.lt-ie9 .header_misc b {
+  font-weight: normal !important;
+}
+
+.header_misc em,
+.header_misc i {
+  font-family: &quot;AvenirNextLTW01-Italic&quot;, Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+
+.lt-ie9 .header_misc em,
+.lt-ie9 .header_misc i {
+  font-style: normal !important;
+}
+
+.lt-ie9 .header_misc em,
+.lt-ie9 .header_misc i {
+  font-style: normal !important;
+}
+
+.header_misc strong,
+.header_misc b {
+  font-family: &quot;AvenirNextLTW01-Demi&quot;, Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+
+.lt-ie9 .header_misc strong,
+.lt-ie9 .header_misc b {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .header_misc strong,
+.lt-ie9 .header_misc b {
+  font-weight: normal !important;
+}
+
+.header_misc_tel {
+  padding-right: 15px;
+  border-right: 1px solid #babbbd;
+  margin-right: 0.6875em;
+  color: #43484e;
+  border-color: #43484e;
+}
+
+.header_misc_tel:visited,
+.header_misc_tel.visited {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:hover,
+.header_misc_tel.hover {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:focus,
+.header_misc_tel.focus {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:active,
+.header_misc_tel.active {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:visited,
+.header_misc_tel.visited {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:hover,
+.header_misc_tel.hover {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:focus,
+.header_misc_tel.focus {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:active,
+.header_misc_tel.active {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:visited,
+.header_misc_tel.visited {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:hover,
+.header_misc_tel.hover {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:focus,
+.header_misc_tel.focus {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:active,
+.header_misc_tel.active {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:visited,
+.header_misc_tel.visited {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:hover,
+.header_misc_tel.hover {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:focus,
+.header_misc_tel.focus {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_tel:active,
+.header_misc_tel.active {
+  border-color: #43484e;
+  color: #43484e;
+}
+
+.header_misc_es {
+  font-family: &quot;AvenirNextLTW01-Demi&quot;, Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0.35714286em;
+  font-size: 0.875em;
+  line-height: 1.57142857;
+  border-bottom-width: 1px;
+}
+
+.lt-ie9 .header_misc_es {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .header_misc_es {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .header_misc_es {
+  font-weight: normal !important;
+}
+
+.lt-ie9 .header_misc_es {
+  font-weight: normal !important;
+}
+
+.header_misc_es:hover,
+.header_misc_es.hover {
+  border-bottom-width: 1px;
+}
+
+.header_misc_es:hover,
+.header_misc_es.hover {
+  border-bottom-width: 1px;
 }
 </code></pre>
       </div>
