Some refactoring and other mogrations.

--- a/_includes/upcoming-events.html
+++ b/_includes/upcoming-events.html
@@ -1,4 +1,6 @@
 
+{% macro render() %}
+
 <div class="upcoming-events">
     <h1 class="header-slug">
         <span class="header-slug_inner">
@@ -9,3 +11,5 @@
         placeholder
     </div>
 </div>
+
+{% endmacro %}
