--- a/layouts/layout-1-3/index.html
+++ b/layouts/layout-1-3/index.html
@@ -1,5 +1,5 @@
 {% extends "layout-1-3.html" %}
-{% import "_section_layouts.html" as section %}
+{% import "_section-layouts.html" as section %}
 
 {# Variables #}
 {% set active_nav_id = "layout-1-3" -%}
