--- a/layouts/layout-base-sidebar-first/index.html
+++ b/layouts/layout-base-sidebar-first/index.html
@@ -1,5 +1,5 @@
 {% extends "layout-base-sidebar-first.html" %}
-{% import "_section_layouts.html" as section %}
+{% import "_section-layouts.html" as section %}
 
 {% block demo_title -%}
     Base layout with sidebar content first
