--- a/layouts/layout-side-nav/index.html
+++ b/layouts/layout-side-nav/index.html
@@ -1,5 +1,5 @@
 {% extends "layout-side-nav.html" %}
-{% import "_section_layouts.html" as section %}
+{% import "_section-layouts.html" as section %}
 
 {# Variables #}
 
