--- a/_layouts/layout-base-main-first.html
+++ b/_layouts/layout-base-main-first.html
@@ -1,6 +1,6 @@
 {% extends "layout-base.html" %}
 
-{% block body_content scoped -%}
+{% block body_content scoped %}
 <div class="wrapper content_wrapper">
     <div class="content_main {% block content_main_modifiers -%}{%- endblock %}">
         <section>
@@ -11,4 +11,4 @@
         {% block content_sidebar scoped -%}{%- endblock %}
     </aside>
 </div>
-{%- endblock %}
+{% endblock %}
