--- a/_layouts/layout-base-sidebar-first.html
+++ b/_layouts/layout-base-sidebar-first.html
@@ -1,6 +1,6 @@
 {% extends "layout-base.html" %}
 
-{% block body_content scoped -%}
+{% block body_content scoped %}
 <div class="wrapper content_wrapper">
     <aside class="content_sidebar {% block content_sidebar_modifiers -%}{%- endblock %}">
         {% block content_sidebar scoped -%}{%- endblock %}
@@ -11,4 +11,4 @@
         </section>
     </div>
 </div>
-{%- endblock %}
+{% endblock %}
