--- a/layouts/layout-2-1-bleedbar/index.html
+++ b/layouts/layout-2-1-bleedbar/index.html
@@ -1,5 +1,5 @@
 {% extends "layout-2-1-bleedbar.html" %}
-{% import "_section_layouts.html" as section %}
+{% import "_section-layouts.html" as section %}
 
 {% block demo_title -%}
     2-1 bleedbar layout
