--- a/_layouts/layout-2-1.html
+++ b/_layouts/layout-2-1.html
@@ -1,4 +1,4 @@
-{% extends "layout-base-main-first.html" %}
+{% extends "content-base-main-first.html" %}
 
 {% block content_modifiers -%}
     content__2-1
