--- a/_layouts/content-base-sidebar-first.html
+++ b/_layouts/content-base-sidebar-first.html
@@ -1,4 +1,4 @@
-{% extends "layout-base.html" %}
+{% extends "content-base.html" %}
 
 {% block body_content scoped %}
 <div class="wrapper content_wrapper">
